<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.faoilean.music.SongListed">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:layout_marginLeft="10dp"
                android:text="@string/songs"
                android:textColor="#FFFFFF"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="10dp"

                android:adjustViewBounds="true"
                android:maxHeight="32dp"
                android:maxWidth="30dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/music" />

            <Button
                android:id="@+id/addSong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/add_songs"
                android:layout_marginTop="5dp" />



        </LinearLayout>


        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/username"
            android:textColor="#FFFFFF" />


        <ListView
            android:id="@+id/theList"
            android:layout_width="match_parent"
            android:layout_height="330dp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:text="@string/log_out"
            android:layout_marginTop="5dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
