<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.faoilean.music.UserAddSong">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="300dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:rowCount="4"
        tools:columnCount="2">


        <ImageButton
            android:id="@+id/kendrick"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_row="0"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/kendrick" />

        <ImageButton
        android:id="@+id/adele"
            android:layout_width="200dp"
            android:layout_height="200dp"
        android:layout_column="1"
        android:layout_row="0"
        android:maxHeight="20dp"
        android:maxWidth="20dp"
        android:scaleType="fitStart"
        app:srcCompat="@drawable/adele" />



        <ImageButton
            android:id="@+id/boyzin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_row="1"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/boyzin" />

        <ImageButton
            android:id="@+id/gravity"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="1"
            android:layout_row="1"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/coldplay_talk" />

        <ImageButton
            android:id="@+id/kevin"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_row="2"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/kevin" />

        <ImageButton
            android:id="@+id/edSheeran"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="1"
            android:layout_row="2"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/edsheeran" />

        <ImageButton
            android:id="@+id/asap"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="0"
            android:layout_row="3"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/asap" />

        <ImageButton
            android:id="@+id/kendrick2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="1"
            android:layout_row="3"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/kendrick" />

    </GridLayout>

    </ScrollView>

    <LinearLayout
        android:layout_marginTop="100dp"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="310dp"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_marginTop="300dp"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="310dp"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/Song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/SongInf"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="20sp"
                android:layout_marginLeft="30dp"/>

        </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="310dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/ArtistInf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="310dp"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/Album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/AlbumInf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Done"
            android:layout_gravity="center"/>
        </LinearLayout>

</android.support.constraint.ConstraintLayout>
